--- a/01_Proposal/Document/thesis.bib
+++ b/01_Proposal/Document/thesis.bib
@@ -153,6 +153,45 @@
   keywords = {Computer aided software engineering,Computer Society,dynamic link generation,Feedback,Independent Validation and Verification (IV&V),information retrieval,Information retrieval,Large scale integration,LSI,precision.,Prototypes,recall,Requirements tracing,Risk analysis,Spine,System testing,TF-IDF,Verification and Validation (V&V)}
 }
 
+@inproceedings{hey2021ImprovingTraceability,
+  title = {Improving {{Traceability Link Recovery Using Fine-grained Requirements-to-Code Relations}}},
+  booktitle = {2021 {{IEEE International Conference}} on {{Software Maintenance}} and {{Evolution}} ({{ICSME}})},
+  author = {Hey, Tobias and Chen, Fei and Weigelt, Sebastian and Tichy, Walter F.},
+  date = {2021-09},
+  pages = {12--22},
+  issn = {2576-3148},
+  doi = {10.1109/ICSME52107.2021.00008},
+  url = {https://ieeexplore.ieee.org/abstract/document/9609109},
+  urldate = {2025-06-14},
+  eventtitle = {2021 {{IEEE International Conference}} on {{Software Maintenance}} and {{Evolution}} ({{ICSME}})},
+  keywords = {Bit error rate,Bridges,Conferences,Knowledge based systems,Natural Language Processing,Natural languages,Requirements Engineering,Semantics,Software maintenance,Traceability,Traceability Link Recovery,Word Embeddings,Word Movers Distance}
+}
+
+@software{hey2025ReplicationPackage,
+  title = {Replication {{Package}} for "{{Requirements Traceability Link Recovery}} via {{Retrieval-Augmented Generation}}"},
+  author = {Hey, Tobias and Fuchß, Dominik and Keim, Jan and Koziolek, Anne},
+  date = {2025-01-31},
+  doi = {10.5281/zenodo.14779458},
+  url = {https://zenodo.org/records/14779458},
+  urldate = {2025-06-15},
+  organization = {Zenodo}
+}
+
+@inproceedings{hey2025RequirementsTraceability,
+  title = {Requirements {{Traceability Link Recovery}} via~{{Retrieval-Augmented Generation}}},
+  booktitle = {Requirements {{Engineering}}: {{Foundation}} for {{Software Quality}}},
+  author = {Hey, Tobias and Fuchß, Dominik and Keim, Jan and Koziolek, Anne},
+  editor = {Hess, Anne and Susi, Angelo},
+  date = {2025},
+  pages = {381--397},
+  publisher = {Springer Nature Switzerland},
+  location = {Cham},
+  doi = {10.1007/978-3-031-88531-0_27},
+  isbn = {978-3-031-88531-0},
+  langid = {english},
+  keywords = {LLM,Requirements Engineering,Requirements Traceability,Retrieval-Augmented Generation,Traceability Link Recovery}
+}
+
 @software{hulbert2023UsingTreeofThought,
   title = {Using {{Tree-of-Thought Prompting}} to Boost {{ChatGPT}}'s Reasoning},
   author = {Hulbert, Dave},
@@ -161,6 +200,12 @@
   url = {https://github.com/dave1010/tree-of-thought-prompting},
   urldate = {2025-06-02},
   version = {0.1}
+}
+
+@online{ImprovingTraceability,
+  title = {Improving {{Traceability Link Recovery Using Fine-grained Requirements-to-Code Relations}} | {{IEEE Conference Publication}} | {{IEEE Xplore}}},
+  url = {https://ieeexplore.ieee.org/abstract/document/9609109},
+  urldate = {2025-06-14}
 }
 
 @inproceedings{keim2021TraceLink,
@@ -176,6 +221,28 @@
   isbn = {978-3-030-86044-8},
   langid = {english},
   keywords = {Information retrieval,Modeling,Natural language processing,Software Architecture Documentation,Trace link recovery}
+}
+
+@inproceedings{khattab2023DSPyCompiling,
+  title = {{{DSPy}}: {{Compiling Declarative Language Model Calls}} into {{State-of-the-Art Pipelines}}},
+  shorttitle = {{{DSPy}}},
+  author = {Khattab, Omar and Singhvi, Arnav and Maheshwari, Paridhi and Zhang, Zhiyuan and Santhanam, Keshav and A, Sri Vardhamanan and Haq, Saiful and Sharma, Ashutosh and Joshi, Thomas T. and Moazam, Hanna and Miller, Heather and Zaharia, Matei and Potts, Christopher},
+  date = {2023-10-13},
+  url = {https://openreview.net/forum?id=sY5N0zY5Od},
+  urldate = {2025-06-15},
+  eventtitle = {The {{Twelfth International Conference}} on {{Learning Representations}}},
+  langid = {english}
+}
+
+@online{khattab2023DSPyCompilinga,
+  title = {{{DSPy}}: {{Compiling Declarative Language Model Calls}} into {{Self-Improving Pipelines}}},
+  shorttitle = {{{DSPy}}},
+  author = {Khattab, Omar and Singhvi, Arnav and Maheshwari, Paridhi and Zhang, Zhiyuan and Santhanam, Keshav and Vardhamanan, Sri and Haq, Saiful and Sharma, Ashutosh and Joshi, Thomas T. and Moazam, Hanna and Miller, Heather and Zaharia, Matei and Potts, Christopher},
+  date = {2023-10-05},
+  url = {https://arxiv.org/abs/2310.03714v1},
+  urldate = {2025-06-15},
+  langid = {english},
+  organization = {arXiv.org}
 }
 
 @online{kojima2023LargeLanguage,
@@ -249,6 +316,20 @@
   urldate = {2025-05-20},
   pubstate = {prepublished},
   keywords = {Computer Science - Computation and Language}
+}
+
+@online{lin2022EnhancingAutomated,
+  title = {Enhancing {{Automated Software Traceability}} by {{Transfer Learning}} from {{Open-World Data}}},
+  author = {Lin, Jinfeng and Poudel, Amrit and Yu, Wenhao and Zeng, Qingkai and Jiang, Meng and Cleland-Huang, Jane},
+  date = {2022-07-03},
+  eprint = {2207.01084},
+  eprinttype = {arXiv},
+  eprintclass = {cs},
+  doi = {10.48550/arXiv.2207.01084},
+  url = {http://arxiv.org/abs/2207.01084},
+  urldate = {2025-06-14},
+  pubstate = {prepublished},
+  keywords = {Computer Science - Software Engineering}
 }
 
 @online{LMOpsPrompt_optimization,
@@ -329,6 +410,20 @@
   eventtitle = {{{EMNLP}} 2023}
 }
 
+@online{ramnath2025SystematicSurvey,
+  title = {A {{Systematic Survey}} of {{Automatic Prompt Optimization Techniques}}},
+  author = {Ramnath, Kiran and Zhou, Kang and Guan, Sheng and Mishra, Soumya Smruti and Qi, Xuan and Shen, Zhengyuan and Wang, Shuai and Woo, Sangmin and Jeoung, Sullam and Wang, Yawei and Wang, Haozhu and Ding, Han and Lu, Yuzhe and Xu, Zhichao and Zhou, Yun and Srinivasan, Balasubramaniam and Yan, Qiaojing and Chen, Yueyan and Ding, Haibo and Xu, Panpan and Cheong, Lin Lee},
+  date = {2025-04-02},
+  eprint = {2502.16923},
+  eprinttype = {arXiv},
+  eprintclass = {cs},
+  doi = {10.48550/arXiv.2502.16923},
+  url = {http://arxiv.org/abs/2502.16923},
+  urldate = {2025-06-14},
+  pubstate = {prepublished},
+  keywords = {Computer Science - Artificial Intelligence,Computer Science - Computation and Language}
+}
+
 @inproceedings{rodriguez2023PromptsMatter,
   title = {Prompts {{Matter}}: {{Insights}} and {{Strategies}} for {{Prompt Engineering}} in {{Automated Software Traceability}}},
   shorttitle = {Prompts {{Matter}}},
@@ -340,6 +435,21 @@
   doi = {10.1109/REW57809.2023.00087},
   url = {https://ieeexplore.ieee.org/abstract/document/10260721},
   urldate = {2025-05-13},
+  eventtitle = {2023 {{IEEE}} 31st {{International Requirements Engineering Conference Workshops}} ({{REW}})},
+  keywords = {automated software traceability,Conferences,large language models,prompt engineering,Requirements engineering,Software}
+}
+
+@inproceedings{rodriguez2023PromptsMattera,
+  title = {Prompts {{Matter}}: {{Insights}} and {{Strategies}} for {{Prompt Engineering}} in {{Automated Software Traceability}}},
+  shorttitle = {Prompts {{Matter}}},
+  booktitle = {2023 {{IEEE}} 31st {{International Requirements Engineering Conference Workshops}} ({{REW}})},
+  author = {Rodriguez, Alberto D. and Dearstyne, Katherine R. and Cleland-Huang, Jane},
+  date = {2023-09},
+  pages = {455--464},
+  issn = {2770-6834},
+  doi = {10.1109/REW57809.2023.00087},
+  url = {https://ieeexplore.ieee.org/document/10260721},
+  urldate = {2025-06-14},
   eventtitle = {2023 {{IEEE}} 31st {{International Requirements Engineering Conference Workshops}} ({{REW}})},
   keywords = {automated software traceability,Conferences,large language models,prompt engineering,Requirements engineering,Software}
 }
@@ -357,6 +467,19 @@
   urldate = {2025-05-19},
   pubstate = {prepublished},
   keywords = {Computer Science - Computation and Language,Computer Science - Machine Learning}
+}
+
+@online{shojaee2025IllusionThinking,
+  title = {The {{Illusion}} of {{Thinking}}: {{Understanding}} the {{Strengths}} and {{Limitations}} of {{Reasoning Models}} via the {{Lens}} of {{Problem Complexity}}},
+  shorttitle = {The {{Illusion}} of {{Thinking}}},
+  author = {Shojaee, Parshin and Mirzadeh, Iman and Alizadeh, Keivan and Horton, Maxwell and Bengio, Samy and Farajtabar, Mehrdad},
+  date = {2025-06-01},
+  doi = {10.48550/arXiv.2506.06941},
+  url = {https://ui.adsabs.harvard.edu/abs/2025arXiv250606941S},
+  urldate = {2025-06-15},
+  pubstate = {prepublished},
+  keywords = {Artificial Intelligence,Computation and Language,Machine Learning},
+  annotation = {ADS Bibcode: 2025arXiv250606941S}
 }
 
 @software{significantgravitas2025AutoGPT,
