Update on Overleaf.

--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -19,6 +19,6 @@ During software development, many artifacts are created, ranging from the actual
 
 Large language models (LLM) have made rapid advancements in recent years. As they are still unable to reason and think on their own \cite{shojaee2025IllusionThinking}, prompt engineering is required to extract good results. Manually determining prompts suited for each specific problem is a quite tedious and time intensive task. 
 
-To address this shortcoming, automated prompt engineering tools can be used. They will typically use the LLM itself to determine suitable adjustments or generate new prompts based on a description or training data of the problem \cite{}.
+To address this shortcoming, automated prompt engineering tools can be used. They will typically use the LLM itself to determine suitable adjustments or generate new prompts based on a description or training data of the problem \cite{ape}.
 
 \textit{One Page}
