Update on Overleaf.

--- a/thesis.tex
+++ b/thesis.tex
@@ -25,7 +25,7 @@
 \author{Daniel Schwab}
 
 %% Title (and possibly subtitle) of the thesis
-\title{Exploring RAG and Prompt Engineering for Trace Link Recovery}
+\title{Automated Prompt Engineering for Traceability Link Recovery}
 
 %% Type of the thesis 
 \thesistype{Bachelor's Thesis}
@@ -49,7 +49,7 @@
 \advisortwo{Dr.-Ing. Tobias Hey}
 
 %% Please enter the start end end time of your thesis
-\editingtime{16. June 2025}{16. October 2025}
+\editingtime{23. June 2025}{23. October 2025}
 
 %% Please enter the place of residence of the author. This is used on the declarationpage
 \location{Karlsruhe}
@@ -90,7 +90,7 @@
 %% The Preamble begins here
 \frontmatter
 
-\input{sections/declaration}
+%\input{sections/declaration}
 
 \setcounter{page}{1}
 \pagenumbering{roman}
@@ -107,7 +107,8 @@
 %% The text is included from the following files:
 %% - sections/abstract
 
-\includeabstract
+
+%\includeabstract
 
 %% ------------------------
 %% |   Table of Contents  |
@@ -115,7 +116,7 @@
 
 \tableofcontents
 \listoffigures
-\listoftables
+%\listoftables
 
 %% -----------------
 %% |   Main part   |
