--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -12,13 +12,13 @@
 
 \chapter{Introduction}
 \label{ch:Introduction}
-
-Artificial intelligence is rapidly changing many fields of study.
-
 During software development, many artifacts are created, ranging from the actual project code through documentation to a multitude of formal and informal diagrams. Trace link recovery aims to link these artifacts across different domains or versions. Challenges such as inconsistent naming are frequent issues in software projects \cite{wohlrab2019ImprovingConsistency}. Trace link recovery approaches need to be able to deal with such hardships. 
 
-Large language models (LLM) have made rapid advancements in recent years. As they are still unable to reason and think on their own \cite{shojaee2025IllusionThinking}, prompt engineering is required to extract good results. Manually determining prompts suited for each specific problem is a quite tedious and time intensive task. 
+Large language models (LLM) have made rapid advancements in recent years. They are becoming increasingly popular to deal with trace link recovery tasks and have shown very promising results. As they are still unable to reason and think on their own \cite{shojaee2025IllusionThinking}, prompt engineering is required to extract good results. Manually determining prompts suited for each specific problem is a quite tedious and time intensive task. 
 
-To address this shortcoming, automated prompt engineering tools can be used. They will typically use the LLM itself to determine suitable adjustments or generate new prompts based on a description or training data of the problem \cite{ape}.
+To address this shortcoming, automated prompt engineering tools can be used. They will typically use the LLM itself to determine suitable adjustments or generate new prompts based on a description or training data of the problem \cite{ramnath2025SystematicSurvey}.
+
+The LiSSA framework \cite{fuchss2025LiSSAGeneric} ....
+I will contribute an automatic prompt refinement algorithm, hoping to improve trace link recovery especially for larger projects in the requirements to requirements domain.
 
 \textit{One Page}
