Update on Overleaf.

--- a/sdqthesis.cls
+++ b/sdqthesis.cls
@@ -284,6 +284,7 @@
 \RequirePackage{pdflscape}
 \RequirePackage{algorithm}
 \RequirePackage{algpseudocode}
+\RequirePackage{svg}
 \newcommand{\citewithauthor}[1]{\citeauthor{#1} \cite{#1}}
 \newcommand{\directQuote}[3][]{\guillemotleft#2\guillemotright~\cite[#1]{#3}}
 
