--- a/sections/foundations.tex
+++ b/sections/foundations.tex
@@ -31,12 +31,11 @@ The ProTeGi algorithm takes an initial prompt $p_0$ and training data $\{(x_1, y
 
 \begin{figure}[h]
 \centering
-\includegraphics[width=9cm]{graphics/gradient_descent.png}
+\includesvg[width=0.7\linewidth]{graphics/gradient_descent.drawio}
 \caption{Overview of the iterative optimization loop in \cite{pryzant2023AutomaticPrompt}}
 \label{fig:gradient_descent}
 TODO: 
 \begin{itemize}
-    \item improve resolution
     \item add legend
     \item symbolise core loop
 \end{itemize}
