--- a/sections/work_plan.tex
+++ b/sections/work_plan.tex
@@ -54,9 +54,9 @@ A written report will be created to document, summarize and evaluate the results
     milestone left shift =-1,
     milestone right shift =1,
     time slot format=isodate,
-    time slot format/start date=2025-06-23]{2025-06-23}{2025-10-23}
+    time slot format/start date=2025-06-23]{2025-06-23}{2025-10-26}
     \ganttset{bar height=.7}
-        \gantttitlecalendar{year, month=name, week} \\
+        \gantttitlecalendar{year, month=name, week=26} \\
         \ganttgroup{\nameref{phase_initial_overview}}{2025-06-23}{2025-07-27} \\
         \ganttbar{LiSSA setup}{2025-06-23}{2025-07-06} \\
         \ganttbar{ToT implementation}{2025-07-07}{2025-07-13} \\
