--- a/sections/approach.tex
+++ b/sections/approach.tex
@@ -1,24 +1,28 @@
 \chapter{Approach}
-\section{Simple Tree of Thought Classifier}
-\textbf{How}: The LiSSA framework is publicly accessible in a repository \footnote{https://github.com/ArDoCo/LiSSA-RATLR/} using the MIT license. This way, existing classifiers can be used as an inspiration for development. 
-
-The class \verb|classifier| is an abstraction of all classifiers and provides basic functionality to include further classifiers. Integration for different LLM providers, such as Chat-GPT, Ollama and Blablador already exists in the framework. The new classifier can be plugged in directly with little more effort than writing the request prompt and implementing the \verb|classify| function to extract the classification result out of the LLM output.
-
-The prompts by \citewithauthor{hulbert2023UsingTreeofThought} aim to simplify tree-of-thought prompting into a singular request, instead of chaining multiple calls. I will use one of their prompts.
-
-The benchmark data to compare tree-of-thought prompting with the existing zero shot and chain-of-thought classifiers also exists in a public repository \footnote{https://github.com/ArDoCo/Benchmark} \cite{fuchss2022ArDoCoBenchmark}. 
+In this chapter, I will outline how my thesis will be realized and provide source code that can be merged into the LiSSA project.
 
 
-\textbf{Why}: This work package has two major goals. Foremost, to get confident and setup with the general project structure and benchmark data. This will be a prerequisite for all future work in the LiSSA framework. Second, this will broaden the baseline to compare later results and possible improvements against.
+\section{Simple Tree-of-Thought Classifier}
+\label{approach:sec:tot}
+The LiSSA framework is publicly accessible in a repository using the MIT license. Existing classifiers can be used as an inspiration for development. 
 
-\begin{figure}[h!tb]
+The class \verb|classifier| is an abstraction of all classifiers. It provides basic functionality to include further classifiers. Integration for different \LLM providers, such as Chat-GPT, Ollama, and Blablador, already exists in the framework. The new classifier can be plugged in directly with little more effort than writing the request prompt and implementing the \verb|classify| function to extract the classification result out of the \LLM output.
+
+\ToT is a prompting technique exploring more different branches of thoughts than typical \CoT prompts. As illustrated in \autoref{fig:ToT_visualization} 
+
+The prompts by \citewithauthor{hulbert2023UsingTreeofThought} aim to simplify \ToT prompting into a singular request, instead of chaining multiple calls. I will use one of their prompts. The benchmark data to compare \ToT prompting with the existing zero-shot and \CoT classifiers also exists in a public repository \cite{fuchss2022ArDoCoBenchmark}. 
+
+This work package has two major goals. Foremost, to get confident and set up with the general project structure and benchmark data. This will be a prerequisite for all future work in the LiSSA framework. Second, this will broaden the baseline to compare later results and possible improvements against.
+
+\begin{figure}
     \centering
     \includegraphics[width=\linewidth]{graphics/ToT_Yao.png}
     \caption{Tree of Thought visualization by \citewithauthor{yao2023TreeThoughts}}
-    \label{fig:enter-label}
+    \label{fig:ToT_visualization}
 \end{figure}
 
 \section{Naive Iterative Optimizing Classifier}
+\label{approach:sec:naive_iterative}
 \textbf{How:} Another quick classifier implementation will be the simplest automatic iterative prompt optimization algorithm. The same existing abstract \verb|classifier| class can be used as in \ref{phase_initial_overview} to provide basic functionality for the iteratively optimized classifier.
 
 Next, a function $f$ will be required to quantify the result of the current prompt $p$ iteration, called to a large language model $llm$. The simple approach here is to use the successful retrieval rate, by dividing the amount of correctly classified trace links by the total amount of recoverable trace links.
@@ -33,17 +37,18 @@ The benchmark data by \citewithauthor{fuchss2022ArDoCoBenchmark} also provides t
 
 To improve the performance, an optimization prompt is used. The naive approach is to simply ask the LLM to improve the prompt without providing further direction or information about why the prompt did not meet the requirements yet. The hopefully improved prompt will be taken into the next iteration. The act of evaluation and improving will be repeated until a threshold value is passed, meaning the prompt is considered good enough. To limit resource usage, a hard limit will also be included to put an upper bound on the optimization attempts.
 
-\begin{figure}[h!tb]
+\begin{figure}
     \centering
     \includesvg[width=0.7\linewidth]{graphics/iterative_core_loop.drawio}
     \caption{Visualization of a simple iterative optimization algorithm}
-    \label{fig:enter-label}
+    \label{fig:iterative_core_loop}
 \end{figure}
 
 \textbf{Why:} Implementing this naive iteratively optimized classifier will yield fast results to evaluate later, even if more complicated implementations might fail. The core concepts also apply for \ref{phase_gradient_descent} and can be reused. 
 
 
 \section{Automatic Prompt Optimization with Gradient Descent}
+\label{approach:sec:gradient_descent}
 \textbf{How:} The authors have provided their python source code in a publicly accessible repository\footnote{https://github.com/microsoft/LMOps/tree/main/prompt\_optimization} under the MIT licensing. The project code can be of great help when adapting their algorithm to the LiSSA java framework.
 
 The existing iterative optimization implementation from \ref{phase_naive_iterative} can be used as foundations for the implementation, as the core concepts remain the same. Refer to \ref{sec:gradient_descent} for details of the gradient descent based optimization algorithm. The actual implementation of gradient descent will be the main focus here, in order to steer optimized prompts in the right direction.
@@ -51,7 +56,9 @@ The existing iterative optimization implementation from \ref{phase_naive_iterati
 
 \textbf{Why:} The primary idea of this thesis is to explore automated optimization. The naive approach may yield good results already. Feeding more information and processing logic into the optimization system is expected to present better results. Especially suitable results may be reached faster by doing more processing on the machine instead of expensive API calls to the large language model.
 
+
 \section{Evaluation}
+\label{approach:sec:evaluation}
 \textbf{How:} Precision and recall are key measures for information retrieval tasks \cite{hayes2006AdvancingCandidate}. 
 
 \textit{TODO: Explain these metricize and how they are calculated instead of direct quoting and format formulas} 
