Update on Overleaf.

--- a/presentation.tex
+++ b/presentation.tex
@@ -16,8 +16,10 @@
 
 % Beginn der Präsentation
 
-\title[Automated Prompt Engineering for Traceability Link Recovery]{BT: Automated Prompt Engineering for Traceability Link Recovery}
-\subtitle{Institute of Information Security and Dependability (KASTEL), Prof. Anne Koziolek \newline Modelling for Continuous Software Engineering, Supervisor:  M.Sc. Dominik Fuchß} 
+\title[Automated Prompt Engineering for Traceability Link Recovery]{Automated Prompt Engineering for Traceability Link Recovery}
+\subtitle{Bachelor's Thesis Proposal Presentation \\
+Institute of Information Security and Dependability (KASTEL), Prof. Anne Koziolek \\
+Modelling for Continuous Software Engineering (MCSE), Supervisor:  M.Sc. Dominik Fuchß} 
 \author{Daniel Schwab}
 
 \date[23.\,06.\,2025]{23. June 2025}
@@ -62,8 +64,8 @@
 \end{frame}
 
 
-\begin{frame}[picture 66 vertical, picture=images/iterative_core_loop.drawio.pdf]
-\frametitle{What is Automated Prompt Engineering (APE)}
+\begin{frame}[picture 66 vertical, picture=images/iterative_core_loop.pdf]
+\frametitle{What is Automated Prompt Engineering}
     \begin{itemize}
         \item Use the LLM to refine prompts instead of manually formulating them
         \item Improve initial prompt by training with a subset of the actual data
@@ -127,7 +129,7 @@
 
 \section{Implementation}
 
-\begin{frame}[picture 50 vertical, picture=images/gradient_descent.drawio.pdf]
+\begin{frame}[picture 50 vertical, picture=images/gradient_descent.pdf]
 \frametitle{Automated Prompt Engineering with Gradient Descent}
     \begin{itemize}
         \item Improved APE algorithm by \cite{pryzant2023AutomaticPrompt}
